[project]
name = "transcranial-ultrasound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "jax>=0.4.38",
    "jwave>=0.2.1",
    "k-wave-python>=0.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pydicom>=3.0.1",
    "tqdm>=4.67.1",
    "xarray>=2024.11.0",
]
